--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1>Hello, my name is <strong>Darren Via</strong>, software developer,<br />
-					problem-solver, traveler, and an avid sports fan.</h1>
+					<h1>Hello, my name is <strong>Darren Via</strong>. I am a 28 year old software developer,<br />
+					problem-solver, traveler, investor, and avid sports fan.</h1>
 				</div>
 			</header>
 
@@ -28,7 +28,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>I am 28 years old. I was born in Maryland, and raised in West Virginia.</h2>
+							<h2>Maryland born, West Virginia raised.</h2>
 						</header>
 						<p>As a kid, I was always interested in tech. In high school, I attended James Rumsey Technical Institute. I took Comptia A+ and Cisco CCNA classes while I was there. Since then, I have ventured around trying my hand in a few different things. I spent 6 years as a cook before moving into restaurant management. I had heard the moniker "Learn to code." multiple times, so I decided to give it a shot. After work, and on my days off, I would spend hours going through different online coding courses. I had gotten laid off due to Covid-19 and that allowed me to dive into my career as a software developer. I recently completed the 24-week course at App Academy, which sharpened all of my skills allowing me to thrive in a new role.</p>
 					</section>
@@ -43,40 +43,25 @@
 								<p>Viora is a clone of Quora.com. It is a solo project that I completed in about 10 days. Viora was built with Javascript, HTML, CSS, React, Redux, Python, Flask, SQLAlchemy, and  PostgreSQL.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/Ingestibles.png" class="image fit thumb"><img src="images/thumbs/Ingestibles.png" alt="" /></a>
+								<h3>Ingestibles</h3>
+								<p>Ingestibles is an Instructables.com clone. It was designed and deployed in about 5 days with an amazing team that I was luck to be a part of. Ingestibles was created with Javascript, HTML, CSS, React, Redux, Python, Flask, SQLAlchemy, and PostgreSQL. </p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/Groovium.png" class="image fit thumb"><img src="images/thumbs/Groovium.png" alt="" /></a>
+								<h3>Groovium</h3>
+								<p>Groovium is a Medium.com clone. All of the features and styling were implemented in about 5 days. We were a strong a diligent team of software developers working as part of a group for the first time. I must say this project is one I am very proud of.</p>
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="darrenviaresume.docx" class="button" download>Full Portfolio</a></li>
 						</ul>
 					</section>
 
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>I am available to talk to anytime. Coding, investing, sports, weather, traveling, or just to say hello, give me a holler.</p>
 						<div class="row">
 							<div class="col-8 col-12-small">
 								<form method="post" action="#">
@@ -94,17 +79,17 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
+										316 N. Centre St. Apt. 5<br />
+										Martinsburg, WV 25404<br />
 										United States
 									</li>
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										000-000-0000
+										681-261-9706
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="mailto: aivnerrad1993@gmail.com">aivnerrad1993@gmail.com</a>
 									</li>
 								</ul>
 							</div>
@@ -435,13 +420,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li><a href="https://twitter.com/DarrenVia" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://github.com/aivnerrad" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto: aivnerrad1993@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 			</footer>
