--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1>Hello, my name is <strong>Darren Via</strong>. I am a 28 year old software developer,<br />
-					problem-solver, traveler, investor, and avid sports fan.</h1>
+					<h1>Hello, my name is <strong>Darren Via</strong>. I am a 28 year old software developer,
+					problem-solver, traveler, investor, and avid sports fan. </h1>
+					Proficient in mulitiple languages and frameworks including English, Javascript, Python, React, Flask, Express, SQL, PostgreSQL, SQLAlchemy, Sequelize, Git, HTML5, CSS3, Pug, Jinja.</h1>
 				</div>
 			</header>
 
@@ -54,7 +55,7 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="darrenviaresume.docx" class="button" download>Full Portfolio</a></li>
+							<li><a href="darrenviaresume.docx" class="button" download>My Resume</a></li>
 						</ul>
 					</section>
 
