added eventually to portfolio

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<header class="major">
 							<h2>Maryland born, West Virginia raised.</h2>
 						</header>
-						<p>As a kid, I was always interested in tech. In high school, I attended James Rumsey Technical Institute. I took Comptia A+ and Cisco CCNA classes while I was there. Since then, I have ventured around trying my hand in a few different things. I spent 6 years as a cook before moving into restaurant management. I had heard the moniker "Learn to code." multiple times, so I decided to give it a shot. After work, and on my days off, I would spend hours going through different online coding courses. I had gotten laid off due to Covid-19 and that allowed me to dive into my career as a software developer. I recently completed the 24-week course at App Academy, which sharpened all of my skills allowing me to thrive in a new role.</p>
+						<p>As a kid, I was always interested in tech. In high school, I attended James Rumsey Technical Institute. I took Comptia A+ and Cisco CCNA classes while I was there. Since then, I have ventured around trying my hand in a few different things. I spent 6 years as a cook before being promoted into restaurant management. I had heard the moniker "Learn to code." multiple times, so I decided to give it a shot. After work, and on my days off, I would spend hours going through different online coding courses. I had gotten laid off due to Covid-19 and that allowed me to dive into my career as a software developer. I recently completed the 24-week course at App Academy, which sharpened all of my skills allowing me to thrive in a new role.</p>
 					</section>
 
 				<!-- Two -->
@@ -51,7 +51,12 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Groovium.png" class="image fit thumb"><img src="images/thumbs/Groovium.png" alt="" /></a>
 								<h3>Groovium</h3>
-								<p>Groovium is a Medium.com clone. All of the features and styling were implemented in about 5 days. We were a strong a diligent team of software developers working as part of a group for the first time. I must say this project is one I am very proud of.</p>
+								<p>Groovium is a Medium.com clone. All of the features and styling were implemented in about 5 days. We were a strong and diligent team of software developers working as part of a group for the first time.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/Eventually.png" class="image fit thumb"><img src="images/thumbs/Eventually.png" alt="" /></a>
+								<h3>Eventually</h3>
+								<p>Eventually is an Eventbrite.com clone. This is one of my first Full-Stack projects. I must say this project is one I am very proud of. Eventually was created with Javascript, HTML, CSS, React, Redux, Express, and PostgreSQL.</p>
 							</article>
 						</div>
 						<ul class="actions">
