--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<title>Darren Via</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="image" property="og:image" content="images/thumbs/MyPage.png">
-		<meta name="description" property="og:description" content="My name is Darren Via, and this is my personal site. I appreciate you taking the time to look it over. Links to my projects, as well as my resume, can be found on this site.">
+		<meta name="image" property="og:image" content="images/thumbs/MyPage.png" />
+		<meta name="description" property="og:description" content="My name is Darren Via, and this is my personal site. I appreciate you taking the time to look it over. Links to my projects, as well as my resume, can be found on this site." />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
