--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="image" property="og:image" content="images/MyPage.png" />
 		<meta name="description" property="og:description" content="My name is Darren Via, and this is my personal site. I appreciate you taking the time to look it over. Links to my projects, as well as my resume, can be found on this site." />
+		<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
