--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Groovium.png" class="image fit thumb"><img src="images/thumbs/Groovium.png" alt="https://groovium.herokuapp.com/"/></a>
-								<a href="">Groovium.com</a>
+								<a href="https://groovium.herokuapp.com/">Groovium.com</a>
 								<p>Groovium is a Medium.com clone. All of the features and styling were implemented in about 5 days. We were a strong and diligent team of software developers working as part of a group for the first time.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
