--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1>Hello, my name is <strong>Darren Via</strong>. I am a 28 year old software developer,
 					problem-solver, traveler, investor, and avid sports fan. </h1>
-					Proficient in mulitiple languages and frameworks including English, Javascript, Python, React, Flask, Express, SQL, PostgreSQL, SQLAlchemy, Sequelize, Git, HTML5, CSS3, Pug, Jinja.</h1>
+					Proficient in mulitiple languages and frameworks including English, Javascript, Python, React/Redux, Flask, Express, PostgreSQL, SQLAlchemy</h1>
 				</div>
 			</header>
 
@@ -37,7 +37,15 @@
 						<header class="major">
 							<h2>Maryland born, West Virginia raised.</h2>
 						</header>
-						<p>As a kid, I was always interested in tech. In high school, I attended James Rumsey Technical Institute. I took Comptia A+ and Cisco CCNA classes while I was there. Since then, I have ventured around trying my hand in a few different things. I spent 6 years as a cook before being promoted into restaurant management. I had heard the moniker "Learn to code." multiple times, so I decided to give it a shot. After work, and on my days off, I would spend hours going through different online coding courses. I had gotten laid off due to Covid-19 and that allowed me to dive into my career as a software developer. I recently completed the 24-week course at App Academy, which sharpened all of my skills allowing me to thrive in a new role.</p>
+						<p>As a kid, I was always interested in tech. In high school, I attended James Rumsey Technical Institute. I took computer hardware and networking classes while I was there. Since then, I have ventured around trying my hand in a few different things. I spent 6 years as a cook before being promoted into restaurant management. After work, and on my days off, I would spend hours going through different online coding courses. I had gotten laid off due to Covid-19 and that allowed me to dive into my career as a software developer.
+
+						I went through the program at App Academy, 24 weeks of learning full-stack development. The course started slow with HTML, CSS, and JS.Then we learned about DS&A/Big-O, spent some time with backend development making raw SQL queries, and then started using frameworks like Express, React, and Redux. The last few weeks of the course covered Python basics, Flask and SQLAlchemy.
+
+						After each major section we completed, we were asked to demonstrate those skills by cloning a website from a given list. I have all of these projects hosted on Heroku, using Kaffeine to keep them running. The final project was our graduation project. A culmination and application of our knowledge as software developers. We had 2 weeks to create and deploy a working, bug-free, web application.
+
+						On November 15th, I completed the course, and have since been working on HackerRank and CSSBattles.
+						I will continue to sharpen my skills, grow as a developer, and then pass on the knowledge I can acquire to the next generation of career-changers like myself.
+						</p>
 					</section>
 
 				<!-- Two -->
@@ -47,22 +55,22 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Viora.png" class="image fit thumb"><img src="images/thumbs/Viora.png" alt="" /></a>
 								<a href="https://viora-app.herokuapp.com/">Viora.com</a>
-								<p>Viora is a clone of Quora.com. It is a solo project that I completed in about 10 days. Viora was built with Javascript, HTML, CSS, React, Redux, Python, Flask, SQLAlchemy, and  PostgreSQL.</p>
+								<p>Viora is a website that allows users to browse questions and answers to certain topics. In a constantly updating feed, users can see posts relevant to them or the topic they are viewing. Each topic has posts in a "did you know?" format, with an adjoining section allowing users to ask actual question about a topic.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Ingestibles.png" class="image fit thumb"><img src="images/thumbs/Ingestibles.png" alt="" /></a>
 								<a href="https://ingestibles-app.herokuapp.com/">Ingestibles.com</a>
-								<p>Ingestibles is an Instructables.com clone. It was designed and deployed in about 5 days with an amazing team that I was luck to be a part of. Ingestibles was created with Javascript, HTML, CSS, React, Redux, Python, Flask, SQLAlchemy, and PostgreSQL. </p>
+								<p>Ingestibles is a DIY cookbook website that allows users to check out, or post their own recipes. Recipes are categorized and easy to find, especially with the ability to search for the recipe that you like. Simply begin to type in the search bar, and a list of smart results will display below.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Groovium.png" class="image fit thumb"><img src="images/thumbs/Groovium.png" alt="https://groovium.herokuapp.com/"/></a>
 								<a href="https://groovium.herokuapp.com/">Groovium.com</a>
-								<p>Groovium is a Medium.com clone. All of the features and styling were implemented in about 5 days. We were a strong and diligent team of software developers working as part of a group for the first time.</p>
+								<p>Groovium is a 1970s-themed blog post website. Users can write stories of their own, or they can read articles written by others. Users can easily find authors that they like with the click of the follow button, or they can reference back to stories they have bookmarked for future reading.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Eventually.png" class="image fit thumb"><img src="images/thumbs/Eventually.png" alt="" /></a>
 								<a href="https://eventually-aivnerrad.herokuapp.com/">Eventually.com</a>
-								<p>Eventually is an Eventbrite.com clone. This is one of my first Full-Stack projects. I must say this project is one I am very proud of. Eventually was created with Javascript, HTML, CSS, React, Redux, Express, and PostgreSQL.</p>
+								<p>Eventually is a sale event website. Users can find sale events to attend, such as yard sales, garage sales, estate sales, etc. Users can also create sale events of their own. An address input is required, this address will place your sale on a Google Map for other users to find. </p>
 							</article>
 						</div>
 						<ul class="actions">
