--- a/index.html
+++ b/index.html
@@ -37,14 +37,16 @@
 						<header class="major">
 							<h2>Maryland born, West Virginia raised.</h2>
 						</header>
-						<p>As a kid, I was always interested in tech. In high school, I attended James Rumsey Technical Institute. I took computer hardware and networking classes while I was there. Since then, I have ventured around trying my hand in a few different things. I spent 6 years as a cook before being promoted into restaurant management. After work, and on my days off, I would spend hours going through different online coding courses. I had gotten laid off due to Covid-19 and that allowed me to dive into my career as a software developer.
-
-						I went through the program at App Academy, 24 weeks of learning full-stack development. The course started slow with HTML, CSS, and JS.Then we learned about DS&A/Big-O, spent some time with backend development making raw SQL queries, and then started using frameworks like Express, React, and Redux. The last few weeks of the course covered Python basics, Flask and SQLAlchemy.
-
-						After each major section we completed, we were asked to demonstrate those skills by cloning a website from a given list. I have all of these projects hosted on Heroku, using Kaffeine to keep them running. The final project was our graduation project. A culmination and application of our knowledge as software developers. We had 2 weeks to create and deploy a working, bug-free, web application.
-
-						On November 15th, I completed the course, and have since been working on HackerRank and CSSBattles.
-						I will continue to sharpen my skills, grow as a developer, and then pass on the knowledge I can acquire to the next generation of career-changers like myself.
+						<p>As a kid, I was always interested in tech. In high school, I attended James Rumsey Technical Institute. I took computer hardware and networking classes while I was there. Since then, I have ventured around trying my hand in a few different things. I spent 6 years as a cook before being promoted into restaurant management. After work, and on my days off, I would spend hours going through different online coding courses. I had gotten laid off due to Covid-19 and that allowed me to dive into my career as a software developer.</p>
+						<p>
+							I went through the program at App Academy, 24 weeks of learning full-stack development. The course started slow with HTML, CSS, and JS.Then we learned about DS&A/Big-O, spent some time with backend development making raw SQL queries, and then started using frameworks like Express, React, and Redux. The last few weeks of the course covered Python basics, Flask and SQLAlchemy.
+						</p>
+						<p>
+							After each major section we completed, we were asked to demonstrate those skills by cloning a website from a given list. I have all of these projects hosted on Heroku, using Kaffeine to keep them running. The final project was our graduation project. A culmination and application of our knowledge as software developers. We had 2 weeks to create and deploy a working, bug-free, web application.
+						</p>
+						<p>
+							On November 15th, I completed the course, and have since been working on HackerRank and CSSBattles.
+							I will continue to sharpen my skills, grow as a developer, and then pass on the knowledge I can acquire to the next generation of career-changers like myself.
 						</p>
 					</section>
 
