--- a/index.html
+++ b/index.html
@@ -37,17 +37,11 @@
 						<header class="major">
 							<h2>Maryland born, West Virginia raised.</h2>
 						</header>
-						<p>As a kid, I was always interested in tech. In high school, I attended James Rumsey Technical Institute. I took computer hardware and networking classes while I was there. Since then, I have ventured around trying my hand in a few different things. I spent 6 years as a cook before being promoted into restaurant management. After work, and on my days off, I would spend hours going through different online coding courses. I had gotten laid off due to Covid-19 and that allowed me to dive into my career as a software developer.</p>
-						<p>
-							I went through the program at App Academy, 24 weeks of learning full-stack development. The course started slow with HTML, CSS, and JS.Then we learned about DS&A/Big-O, spent some time with backend development making raw SQL queries, and then started using frameworks like Express, React, and Redux. The last few weeks of the course covered Python basics, Flask and SQLAlchemy.
-						</p>
-						<p>
-							After each major section we completed, we were asked to demonstrate those skills by cloning a website from a given list. I have all of these projects hosted on Heroku, using Kaffeine to keep them running. The final project was our graduation project. A culmination and application of our knowledge as software developers. We had 2 weeks to create and deploy a working, bug-free, web application.
-						</p>
-						<p>
-							On November 15th, I completed the course, and have since been working on HackerRank and CSSBattles.
-							I will continue to sharpen my skills, grow as a developer, and then pass on the knowledge I can acquire to the next generation of career-changers like myself.
-						</p>
+						<p>My fascination with computers and technology began at the young age of seven after my dad brought home a desktop computer. It was mind-blowing to see what was possible from playing solitaire on my own to watching my mom play cards with my grandmother thousands of miles away. Growing up, I knew I wanted to be a part of the tech space and initially pursued hardware, but after taking a detour through the service industry, I eventually found my place as a software developer. I bring my insatiable curiosity, commitment to learning, and drive to succeed to all of my endeavors, and I look forward to bringing these along with my technical skills to your company.</p>
+
+						<p>Since my love for solving complicated problems led me to programming, I have become proficient in Python, React, Redux, JavaScript, HTML, CSS, PostgreSQL, and many other technologies. I’ve spent the past year of self study and Bootcamp preparation with App Academy. While there, I built four full-stack applications which I would love for you to check out on my portfolio site linked above. I have experience working in an Agile environment, using Git for version control and SCRUM methodologies for group projects.</p>
+
+						<p>In addition to my technical skills, I bring plenty of experience from my time in the restaurant industry. While working both in back and front of house positions, I gained the ability to juggle multiple tasks and priorities, manage and support large teams, and invaluable communication skills. I am a strong leader who keeps morale high amongst my team. I thrive on identifying weaknesses and filling in those gaps. I excel at maintaining a strong workflow allowing completion of my daily tasks. My work ethic, desire to acquire more knowledge, interpersonal skills, and life habits have allowed me to succeed to this point in my career, and I would love to bring all of this to your team and company. Thank you for your time, and I hope to hear from you soon.</p>
 					</section>
 
 				<!-- Two -->
