--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1>Hello, my name is <strong>Darren Via</strong>.  </h1>
+					<h1>Hello, my name is <strong>Darren Via</strong>.</h1>
 					React Developer - HTML, CSS, JavaScript, React, Redux, AJAX, JSON, REST, API, AWS
 				</div>
 			</header>
@@ -36,11 +36,11 @@
 						<header class="major">
 							<h2>Maryland born, West Virginia raised.</h2>
 						</header>
-							<p>		My fascination with computers and technology began at the young age of seven after my dad brought home a desktop computer. It was mind-blowing to see what was possible from playing solitaire on my own to watching my mom play cards with my grandmother thousands of miles away. Growing up, I knew I wanted to be a part of the tech space and initially pursued hardware, but after taking a detour through the service industry, I eventually found my place as a software developer. I bring my insatiable curiosity, commitment to learning, and drive to succeed to all of my endeavors, and I look forward to bringing these along with my technical skills to your company.</p>
+						<p>My fascination with computers and technology began at the young age of seven after my dad brought home a desktop computer. It was mind-blowing to see what was possible from playing solitaire on my own to watching my mom play cards with my grandmother thousands of miles away. Growing up, I knew I wanted to be a part of the tech space and initially pursued hardware, but after taking a detour through the service industry, I eventually found my place as a software developer. I bring my insatiable curiosity, commitment to learning, and drive to succeed to all of my endeavors, and I look forward to bringing these along with my technical skills to your company.</p>
 
-						<p>			Since my love for solving complicated problems led me to programming, I have become proficient in Python, React, Redux, JavaScript, HTML, CSS, PostgreSQL, and many other technologies. I’ve spent the past year of self study and Bootcamp preparation with App Academy. While there, I built four full-stack applications which I would love for you to check out on my portfolio site linked above. I have experience working in an Agile environment, using Git for version control and SCRUM methodologies for group projects.</p>
+						<p>Since my love for solving complicated problems led me to programming, I have become proficient in Python, React, Redux, JavaScript, HTML, CSS, PostgreSQL, and many other technologies. I’ve spent the past year of self study and Bootcamp preparation with App Academy. While there, I built four full-stack applications which I would love for you to check out on my portfolio site linked above. I have experience working in an Agile environment, using Git for version control and SCRUM methodologies for group projects.</p>
 
-						<p>			In addition to my technical skills, I bring plenty of experience from my time in the restaurant industry. While working both in back and front of house positions, I gained the ability to juggle multiple tasks and priorities, manage and support large teams, and invaluable communication skills. I am a strong leader who keeps morale high amongst my team. I thrive on identifying weaknesses and filling in those gaps. I excel at maintaining a strong workflow allowing completion of my daily tasks. My work ethic, desire to acquire more knowledge, interpersonal skills, and life habits have allowed me to succeed to this point in my career, and I would love to bring all of this to your team and company. Thank you for your time, and I hope to hear from you soon.</p>
+						<p>In addition to my technical skills, I bring plenty of experience from my time in the restaurant industry. While working both in back and front of house positions, I gained the ability to juggle multiple tasks and priorities, manage and support large teams, and invaluable communication skills. I am a strong leader who keeps morale high amongst my team. I thrive on identifying weaknesses and filling in those gaps. I excel at maintaining a strong workflow allowing completion of my daily tasks. My work ethic, desire to acquire more knowledge, interpersonal skills, and life habits have allowed me to succeed to this point in my career, and I would love to bring all of this to your team and company. Thank you for your time, and I hope to hear from you soon.</p>
 					</section>
 
 				<!-- Two -->
@@ -50,22 +50,22 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Viora.png" class="image fit thumb"><img src="images/thumbs/Viora.png" alt="" /></a>
 								<a href="https://viora-app.herokuapp.com/">Viora.com</a>
-								<p>		Viora is a website that allows users to browse questions and answers to certain topics. In a constantly updating feed, users can see posts relevant to them or the topic they are viewing. Each topic has posts in a "did you know?" format, with an adjoining section allowing users to ask actual question about a topic.</p>
+								<p>Viora is a website that allows users to browse questions and answers to certain topics. In a constantly updating feed, users can see posts relevant to them or the topic they are viewing. Each topic has posts in a "did you know?" format, with an adjoining section allowing users to ask actual question about a topic.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Ingestibles.png" class="image fit thumb"><img src="images/thumbs/Ingestibles.png" alt="" /></a>
 								<a href="https://ingestibles-app.herokuapp.com/">Ingestibles.com</a>
-								<p>		Ingestibles is a DIY cookbook website that allows users to check out, or post their own recipes. Recipes are categorized and easy to find, especially with the ability to search for the recipe that you like. Simply begin to type in the search bar, and a list of smart results will display below.</p>
+								<p>Ingestibles is a DIY cookbook website that allows users to check out, or post their own recipes. Recipes are categorized and easy to find, especially with the ability to search for the recipe that you like. Simply begin to type in the search bar, and a list of smart results will display below.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Groovium.png" class="image fit thumb"><img src="images/thumbs/Groovium.png" alt="https://groovium.herokuapp.com/"/></a>
 								<a href="https://groovium.herokuapp.com/">Groovium.com</a>
-								<p>		Groovium is a 1970s-themed blog post website. Users can write stories of their own, or they can read articles written by others. Users can easily find authors that they like with the click of the follow button, or they can reference back to stories they have bookmarked for future reading.</p>
+								<p>Groovium is a 1970s-themed blog post website. Users can write stories of their own, or they can read articles written by others. Users can easily find authors that they like with the click of the follow button, or they can reference back to stories they have bookmarked for future reading.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Eventually.png" class="image fit thumb"><img src="images/thumbs/Eventually.png" alt="" /></a>
 								<a href="https://eventually-aivnerrad.herokuapp.com/">Eventually.com</a>
-								<p>		Eventually is a sale event website. Users can find sale events to attend, such as yard sales, garage sales, estate sales, etc. Users can also create sale events of their own.</p>
+								<p>Eventually is a sale event website. Users can find sale events to attend, such as yard sales, garage sales, estate sales, etc. Users can also create sale events of their own. An address input is required, this address will place your sale on a Google Map for other users to find. </p>
 							</article>
 						</div>
 						<ul class="actions">
