--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1>Hello, my name is <strong>Darren Via</strong>.</h1>
-					React Developer - HTML, CSS, JavaScript, React, Redux, AJAX, JSON, REST, API, AWS
 				</div>
 			</header>
 
@@ -34,60 +33,78 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Maryland born, West Virginia raised.</h2>
+							<h2>About me</h2>
 						</header>
-						<p>My fascination with computers and technology began at the young age of seven after my dad brought home a desktop computer. It was mind-blowing to see what was possible from playing solitaire on my own to watching my mom play cards with my grandmother thousands of miles away. Growing up, I knew I wanted to be a part of the tech space and initially pursued hardware, but after taking a detour through the service industry, I eventually found my place as a software developer. I bring my insatiable curiosity, commitment to learning, and drive to succeed to all of my endeavors, and I look forward to bringing these along with my technical skills to your company.</p>
-
-						<p>Since my love for solving complicated problems led me to programming, I have become proficient in Python, React, Redux, JavaScript, HTML, CSS, PostgreSQL, and many other technologies. I’ve spent the past year of self study and Bootcamp preparation with App Academy. While there, I built four full-stack applications which I would love for you to check out on my portfolio site linked above. I have experience working in an Agile environment, using Git for version control and SCRUM methodologies for group projects.</p>
-
-						<p>In addition to my technical skills, I bring plenty of experience from my time in the restaurant industry. While working both in back and front of house positions, I gained the ability to juggle multiple tasks and priorities, manage and support large teams, and invaluable communication skills. I am a strong leader who keeps morale high amongst my team. I thrive on identifying weaknesses and filling in those gaps. I excel at maintaining a strong workflow allowing completion of my daily tasks. My work ethic, desire to acquire more knowledge, interpersonal skills, and life habits have allowed me to succeed to this point in my career, and I would love to bring all of this to your team and company. Thank you for your time, and I hope to hear from you soon.</p>
+						<p>My fascination with technology started when I was seven, when my dad brought home our family's first desktop computer. As I explored the digital world, I was captivated by the endless possibilities it offered - from discovering new games and educational tools to staying connected with family and friends who lived far away. This early exposure ignited a curiosity that would eventually lead me to pursue a career in tech.</p>
+						<p>Initially, I explored hardware and networking, but after a detour through the service industry, I realized building software is something that truly excites me. With an insatiable curiosity, commitment to learning, and drive to succeed, I'm excited to continue building new apps and tools for people to enjoy.</p>
 					</section>
+					<section>
+						<h3>Technical skills</h3>
+						<p>With a passion for tackling complex challenges, I've dedicated myself to mastering a range of programming technologies. My skillset includes:</p>
+						<ul>
+						<li><strong>Programming languages:</strong> Python, JavaScript/TypeScript</li>
+						<li><strong>Front-end frameworks:</strong> React, Redux, Svelte/SvelteKit</li>
+						<li><strong>Web development:</strong> HTML, CSS</li>
+						<li><strong>Database management:</strong> PostgreSQL</li>
+						<li><strong>Version control:</strong> Git</li>
+						<li><strong>Agile methodologies:</strong> SCRUM, Kanban</li>
+						</ul>
+						<p>To further deve-lop my skills, I immersed myself in a year of intense self-study and bootcamp training with App Academy in 2022. This immersive experience culminated in the successful design, development, and deployment of four full-stack applications - two solo projects and two collaborative team efforts. Although the applications are no longer live, the experience and knowledge gained from building them remain invaluable.</p>
+					</section>
+					<section>
+						<h3>Transferable Skills</h3>
+						<p>In addition to my technical expertise, I bring valuable experience from my time in the restaurant industry. Working in management, I developed strong skills in:</p>
+						<ul>
+						<li><strong>Multitasking and prioritization</strong></li>
+						<li><strong>Team management and support</strong></li>
+						<li><strong>Effective communication</strong></li>
+						<li><strong>Leadership and morale-boosting</strong></li>
+						</ul>
+						<p>I excel at identifying areas for improvement, bridging gaps, and streamlining workflows to drive productivity. My diligent work ethic, passion for learning, and effective communication skills have been key to my success in my career to date.</p>
+					</section>
+
 
 				<!-- Two -->
 					<section id="two">
 						<h2>My Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/website-preview.png" class="image fit thumb" alt="Apartments App" ><img src="images/thumbs/website-preview.png" alt="Apartments App" /></a>
+								<a href="https://www.theapartmentsapp.com/home">Apartments App</a>
+<p>Apartments App is a streamlined approach aiming to reduce hassle and increase accessibility for both renters and landlords, making the rental process more efficient overall.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Viora.png" class="image fit thumb"><img src="images/thumbs/Viora.png" alt="" /></a>
-								<a href="https://viora-app.herokuapp.com/">Viora.com</a>
+								<a href="https://viora-app.herokuapp.com/">Viora</a>
 								<p>Viora is a website that allows users to browse questions and answers to certain topics. In a constantly updating feed, users can see posts relevant to them or the topic they are viewing. Each topic has posts in a "did you know?" format, with an adjoining section allowing users to ask actual question about a topic.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Ingestibles.png" class="image fit thumb"><img src="images/thumbs/Ingestibles.png" alt="" /></a>
-								<a href="https://ingestibles-app.herokuapp.com/">Ingestibles.com</a>
+								<a href="https://ingestibles-app.herokuapp.com/">Ingestibles</a>
 								<p>Ingestibles is a DIY cookbook website that allows users to check out, or post their own recipes. Recipes are categorized and easy to find, especially with the ability to search for the recipe that you like. Simply begin to type in the search bar, and a list of smart results will display below.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Groovium.png" class="image fit thumb"><img src="images/thumbs/Groovium.png" alt="https://groovium.herokuapp.com/"/></a>
-								<a href="https://groovium.herokuapp.com/">Groovium.com</a>
+								<a href="https://groovium.herokuapp.com/">Groovium</a>
 								<p>Groovium is a 1970s-themed blog post website. Users can write stories of their own, or they can read articles written by others. Users can easily find authors that they like with the click of the follow button, or they can reference back to stories they have bookmarked for future reading.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/Eventually.png" class="image fit thumb"><img src="images/thumbs/Eventually.png" alt="" /></a>
-								<a href="https://eventually-aivnerrad.herokuapp.com/">Eventually.com</a>
+								<a href="https://eventually-aivnerrad.herokuapp.com/">Eventually</a>
 								<p>Eventually is a sale event website. Users can find sale events to attend, such as yard sales, garage sales, estate sales, etc. Users can also create sale events of their own. An address input is required, this address will place your sale on a Google Map for other users to find. </p>
 							</article>
 						</div>
-						<ul class="actions">
-							<li><a href="Darren Via's Resume.pdf" class="button" download>My Resume</a></li>
-						</ul>
 					</section>
 
 				<!-- Three -->
 					<section id="three">
-						<h2>Get In Touch</h2>
-						<p>I am available to talk to anytime. Coding, investing, sports, weather, traveling, or just to say hello, give me a holler.</p>
+						<h2>Let's Connect</h2>
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										316 N. Centre St. Apt. 5<br />
-										Martinsburg, WV 25404<br />
-										United States
-									</li>
+								
 									<li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										681-261-9706
+										628-999-6649
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
